atualiza o exemplo de uso para a versão atual do tableschema-pandas

--- a/scripts/uso/como-usar-com-o-pandas.ipynb
+++ b/scripts/uso/como-usar-com-o-pandas.ipynb
@@ -37,8 +37,7 @@
     "\n",
     "`pip install datapackage jsontableschama-pandas`\n",
     "\n",
-    "Para este tutorial, estamos usando a versão 1.10.0 do `datapackage`, a versão\n",
-    "0.10.1 do `jsontableschema` e a versão 0.5.0 do `jsontableschema-pandas`. Para\n",
+    "Para este tutorial, estamos usando a versão `1.10.0` do `datapackage` e a versão `1.1.0` do `tableschema-pandas`. Para\n",
     "saber a sua versão, após ter instalado, use os comandos\n",
     "\n",
     "```\n",
@@ -52,9 +51,7 @@
     "\n",
     "pois esse arquivo já contém as versões afixadas.\n",
     "\n",
-    "Obs.: as versões mais recentes têm um\n",
-    "[bug](https://github.com/frictionlessdata/tableschema-pandas-py/issues/33)\n",
-    "que impede o funcionamento."
+    "Para maiores informações, veja o exemplo contido no repositório do [tableschema-pandas](https://github.com/frictionlessdata/tableschema-pandas-py/)."
    ]
   },
   {
@@ -63,8 +60,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import datapackage\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from tableschema import Storage\n",
+    "from datapackage import Package"
    ]
   },
   {
@@ -87,19 +85,24 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/herrmann/dev/plataforma-indicadores/env/lib/python3.6/site-packages/datapackage/pushpull.py:39: UserWarning: Functions \"push/pull_datapackage\" are deprecated. Please use \"Package\" class\n",
-      "  UserWarning)\n",
-      "/home/herrmann/dev/plataforma-indicadores/env/lib/python3.6/site-packages/datapackage/resource.py:468: UserWarning: Property \"resource.table\" is deprecated. Please use \"resource.iter/read\" directly.\n",
-      "  UserWarning)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Gravar no Pandas\n",
+    "\n",
     "url = 'https://github.com/dadosgovbr/catalogos-dados-brasil/raw/master/datapackage.json'\n",
-    "storage = datapackage.pushpull.push_datapackage(descriptor=url,backend='pandas')"
+    "\n",
+    "storage = Storage.connect('pandas')\n",
+    "package = Package(url)\n",
+    "package.save(storage=storage)"
    ]
   },
   {
@@ -107,7 +110,9 @@
    "metadata": {},
    "source": [
     "Um pacote de dados pode conter uma quantidade de *recursos*. Pense em um\n",
-    "recurso como uma tabela em um banco de dados. Cada um é um arquivo CSV."
+    "recurso como uma tabela em um banco de dados. Cada um é um arquivo CSV.\n",
+    "\n",
+    "No contexto do armazenamento dos dados, esses recursos também são chamados de *buckets* (numa tradução livre, \"baldes\")."
    ]
   },
   {
@@ -118,7 +123,7 @@
     {
      "data": {
       "text/plain": [
-       "['dados__solucao___solucao', 'dados__catalogos___catalogos']"
+       "['catalogos', 'solucao']"
       ]
      },
      "execution_count": 3,
@@ -134,13 +139,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ao acessar pela chave, os *buckets* contendo os recursos são também DataFrames\n",
-    "no Pandas:"
+    "Que são também Dataframes do Pandas:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(storage['catalogos'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Por isso, funcionam todas as operações que podem ser feitas com um DataFrames\n",
+    "do Pandas:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -208,26 +240,25 @@
        "2   https://www.wikidata.org/wiki/Q29256  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "storage['dados__solucao___solucao']"
+    "storage['solucao']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A partir daí, basta usar as funcionalidades conhecidas do Pandas. Como, por\n",
-    "exemplo, mostrar o início da tabela."
+    "Como, por exemplo, mostrar o início da tabela."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -338,13 +369,13 @@
        "4   Estadual    Executivo  Interna  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "storage['dados__catalogos___catalogos'].head()"
+    "storage['catalogos'].head()"
    ]
   },
   {
@@ -357,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -370,18 +401,18 @@
        "Name: URL, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "storage['dados__catalogos___catalogos'].groupby('Solução').count()['URL']"
+    "storage['catalogos'].groupby('Solução').count()['URL']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -393,18 +424,18 @@
        "Name: URL, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "storage['dados__catalogos___catalogos'].groupby('Poder').count()['URL']"
+    "storage['catalogos'].groupby('Poder').count()['URL']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -417,18 +448,18 @@
        "Name: URL, dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "storage['dados__catalogos___catalogos'].groupby('Esfera').count()['URL']"
+    "storage['catalogos'].groupby('Esfera').count()['URL']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -452,13 +483,13 @@
        "Name: URL, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "storage['dados__catalogos___catalogos'].groupby('UF').count()['URL']"
+    "storage['catalogos'].groupby('UF').count()['URL']"
    ]
   }
  ],
