acrescenta visualização dos dados

--- a/scripts/uso/como-usar-com-o-pandas.ipynb
+++ b/scripts/uso/como-usar-com-o-pandas.ipynb
@@ -14,9 +14,7 @@
     "Os catálogos de dados abertos podem ser consultados facilmente com a ferramenta\n",
     "Pandas, com ou sem Jupyter Notebook.\n",
     "\n",
-    "Para maiores informações, veja o repositório\n",
-    "[tableschema-pandas-py](https://github.com/frictionlessdata/tableschema-pandas-py).\n",
-    "Tutorial inspirado na\n",
+    "Esse tutorial inspirado na\n",
     "[demonstração](https://github.com/okfn/okfn.github.com/blob/master/resources/using-data-packages-with-pandas.ipynb)\n",
     "do Open Knowledge Labs."
    ]
@@ -32,26 +30,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Além do Pandas, será necessário instalar alguns pacotes. Para isso,\n",
+    "### Frictionless Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Além do Pandas, será necessário instalar alguns pacotes para trabalhar com [Frictionless Data](https://frictionlessdata.io/). Para isso,\n",
     "execute:\n",
     "\n",
-    "`pip install datapackage jsontableschama-pandas`\n",
+    "`pip install datapackage tableschama-pandas`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para maiores informações sobre como usar esses pacotes, veja o exemplo contido\n",
+    "no repositório do\n",
+    "[tableschema-pandas](https://github.com/frictionlessdata/tableschema-pandas-py/)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plotly e Plotly Express"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para visualizar os dados, utilizaremos Plotly e Plotly Express.\n",
+    "Entretanto, sinta-se à vontade para usar a biblioteca de visualização de sua\n",
+    "preferência.\n",
     "\n",
-    "Para este tutorial, estamos usando a versão `1.10.0` do `datapackage` e a versão `1.1.0` do `tableschema-pandas`. Para\n",
-    "saber a sua versão, após ter instalado, use os comandos\n",
+    "Para instalar:\n",
+    "\n",
+    "`pip install plotly plotly_express`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Versões"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para este tutorial, estamos usando a versão `1.10.0` do `datapackage`, a\n",
+    "versão `1.1.0` do `tableschema-pandas`. Quanto às bibliotecas de\n",
+    "visualização, usamos Plotly versão `4.1.0` e Plotly Express versão `0.4.1`.\n",
+    "\n",
+    "Para saber a sua versão, após ter instalado, use os comandos\n",
     "\n",
     "```\n",
     "pip freeze | grep datapackage\n",
     "pip freeze | grep tableschema\n",
+    "pip freeze | grep plotly\n",
     "```\n",
     "\n",
     "Se desejar instalar essas versões exatas, é possível executar o comando\n",
     "\n",
     "`pip install -r requirements.txt`\n",
     "\n",
-    "pois esse arquivo já contém as versões afixadas.\n",
-    "\n",
-    "Para maiores informações, veja o exemplo contido no repositório do [tableschema-pandas](https://github.com/frictionlessdata/tableschema-pandas-py/)."
+    "pois esse arquivo já contém as versões afixadas."
    ]
   },
   {
@@ -61,8 +109,14 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "\n",
+    "# Para trabalhar com Frictionless Data – frictionlessdata.io\n",
     "from tableschema import Storage\n",
-    "from datapackage import Package"
+    "from datapackage import Package\n",
+    "\n",
+    "# Para visualização\n",
+    "import plotly_express as px\n",
+    "import plotly as py, plotly.graph_objects as go"
    ]
   },
   {
@@ -387,6 +441,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Por tipo de solução"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -398,7 +459,7 @@
        "ArcGIS      1\n",
        "CKAN       15\n",
        "Interna    23\n",
-       "Name: URL, dtype: int64"
+       "Name: quantidade, dtype: int64"
       ]
      },
      "execution_count": 7,
@@ -407,30 +468,37 @@
     }
    ],
    "source": [
-    "storage['catalogos'].groupby('Solução').count()['URL']"
+    "tipo_solucao = storage['catalogos'].groupby('Solução').count()['URL'].rename('quantidade')\n",
+    "tipo_solucao"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Poder\n",
-       "Executivo      24\n",
-       "Legislativo    14\n",
-       "Name: URL, dtype: int64"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "storage['catalogos'].groupby('Poder').count()['URL']"
+    "px.bar(\n",
+    "    pd.DataFrame(tipo_solucao).reset_index(),\n",
+    "    x = 'Solução',\n",
+    "    y = 'quantidade',\n",
+    "    color = 'Solução',\n",
+    "    color_discrete_sequence = py.colors.qualitative.Set2\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![gráfico de barras por solução](img/solucao.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Por poder da república"
    ]
   },
   {
@@ -441,11 +509,10 @@
     {
      "data": {
       "text/plain": [
-       "Esfera\n",
-       "Estadual     22\n",
-       "Federal       2\n",
-       "Municipal    15\n",
-       "Name: URL, dtype: int64"
+       "Poder\n",
+       "Executivo      24\n",
+       "Legislativo    14\n",
+       "Name: quantidade, dtype: int64"
       ]
      },
      "execution_count": 9,
@@ -454,12 +521,96 @@
     }
    ],
    "source": [
-    "storage['catalogos'].groupby('Esfera').count()['URL']"
+    "poder = storage['catalogos'].groupby('Poder').count()['URL'].rename('quantidade')\n",
+    "poder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "go.Figure(\n",
+    "    data=go.Pie(\n",
+    "        labels=poder.index,\n",
+    "        values=poder.values,\n",
+    "        hole=.4\n",
+    "    )\n",
+    ").show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![gráfico de rosca por poder](img/poder.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Por esfera"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Esfera\n",
+       "Estadual     22\n",
+       "Federal       2\n",
+       "Municipal    15\n",
+       "Name: quantidade, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "esfera = storage['catalogos'].groupby('Esfera').count()['URL'].rename('quantidade')\n",
+    "esfera"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "go.Figure(\n",
+    "    data=go.Pie(\n",
+    "        labels=esfera.index,\n",
+    "        values=esfera.values,\n",
+    "        hole=.4\n",
+    "    )\n",
+    ").show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![gráfico de rosca por esfera](img/esfera.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Por unidade federativa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -480,24 +631,58 @@
        "RN    2\n",
        "RS    5\n",
        "SP    6\n",
-       "Name: URL, dtype: int64"
+       "Name: quantidade, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "storage['catalogos'].groupby('UF').count()['URL']"
+    "uf = storage['catalogos'].groupby('UF').count()['URL'].rename('quantidade')\n",
+    "uf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.bar(\n",
+    "    pd.DataFrame(uf).reset_index(),\n",
+    "    x = 'UF',\n",
+    "    y = 'quantidade',\n",
+    "    color = 'UF',\n",
+    "    color_discrete_sequence = py.colors.qualitative.Set3\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![gráfico de barras por uf](img/uf.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Obs.:** Neste caderno usamos imagens estáticas em vez das saídas interativas\n",
+    "do Plotly, considerando que estas ocupariam um espaço imenso no repositório.\n",
+    "Além disso, o Github não mostra as saídas interativas na pré-visualização dos\n",
+    "cadernos ao ver um repositório. Entretanto, ao baixar e executar o caderno, as\n",
+    "visualizações interativas estarão disponíveis."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pi-env",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
