--- a/scripts/uso/como-usar-com-o-pandas.ipynb
+++ b/scripts/uso/como-usar-com-o-pandas.ipynb
@@ -40,7 +40,7 @@
     "Além do Pandas, será necessário instalar alguns pacotes para trabalhar com [Frictionless Data](https://frictionlessdata.io/). Para isso,\n",
     "execute:\n",
     "\n",
-    "`pip install datapackage tableschama-pandas`"
+    "`pip install datapackage tableschema-pandas`"
    ]
   },
   {
